1) Обновление отлавливания ошибок